k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskapi-svc
  namespace: taskapi
spec:
  selector:
    app: taskapi
  ports:
    - name: http
      port: 80
      targetPort: 1234
  type: ClusterIP
