k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskapi-ingress
  namespace: taskapi
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: taskapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskapi-svc
                port:
                  number: 80

# exposes the app via Minikube's ingress addon
